# protoboiler

./: .gitignore  LICENSE.md  README.md  boiling-sample.sh  build  build-test.sh  build.sh  launcher  launcher.py  protoboiler.py  pyproject.toml  requirements.txt  setup.sh
protoboiler/: __init__.py
sample/: sample.config
sample/proto/: example.proto  route_guide.proto
sample/templ/: proto_to.proto.py  stub.cpp.py  stub.swift.py
test/: test.config
test/proto/: route_guide.proto  test.proto
test/templ/: proto_to.cpp.py  proto_to.proto.py  route_guide.cpp.py  stub.cpp.py
