[tool.poetry]
name = "protoboiler"
version = "1.2.0"
description = "Protocol Buffers compiler plugin to quickly generate boilerplate code from your Google Protocol Buffer (proto) definitions."
authors = ["Vitaly Kravtsov <in4lio@gmail.com>"]
homepage = "https://github.com/in4lio/protoboiler"
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
protoc-gen-protoboiler = "protoboiler:main"

[tool.poetry.dependencies]
python = "^3.11"
protobuf = "^5.27.2"
f-codec = "^0.1.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
